Fixed contact form layout issue

--- a/style.css
+++ b/style.css
@@ -343,7 +343,7 @@ html{
     height: 120%;
 }
 
-#name{
+.name{
     border: 2px solid black;
     padding: 5px 10px;
 }
@@ -359,11 +359,16 @@ html{
 .form{
     max-width: 500px;
     margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
 }
 
 .form input{
     width: 100%;
     font-size: 20px;
+    background-color: rgba(0, 0, 0, 0.30);
     border: 2px solid grey;
     border-radius: 6px;
     margin: 14px 0px;
@@ -447,6 +452,20 @@ html{
     .paras{
         padding: 0px;
         text-align: center;
+    }
+    .text-center{
+        font-size: 20px;
+    }
+    .form input{
+        width: 300px;
+        height: 22px;
+        margin: 6px;
+        font-size: 9px;
+    }
+    .submit-btn{
+        padding: 5px 10px;
+        font-size: 12px;
+        margin: 12px;
     }
 }
 
